# SobelOpenCVAndAssemblyExample

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
